simplify notes facade api